gccida/c3/dbxout_type_methods
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dbxout_type_methods/src/dbxout.c:1342:15: error: use of undeclared identifier 'off_607A24'
sprintf( v7, &off_607A24[1], type->decl.result->decl.name->identifier.id.len); 
              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dbxout_type_methods/src/obj/dbxout.o] Error 1
